[package]
name = "hotswap-config"
version = "0.2.0"
edition = "2024"
rust-version = "1.87.0"
authors = ["Daniel Curtis <drc@danielryancurtis.com>"]
description = "Zero-downtime configuration management with lock-free hot-reloads and atomic updates"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sadco-io/hotswap-config"
documentation = "https://docs.rs/hotswap-config"
keywords = ["config", "configuration", "hot-reload", "lock-free", "zero-downtime"]
categories = ["config", "development-tools"]
readme = "README.md"
exclude = ["._*", "**/.DS_Store", ".cursor/"]

[features]
default = ["file-watch", "validation"]

# Core features
file-watch = ["notify", "tokio"]
validation = []

# File format support
yaml = ["serde_yaml"]
toml = ["dep:toml"]
json = ["serde_json"]
all-formats = ["yaml", "toml", "json"]

# Advanced features (most require tokio runtime)
partial-updates = ["json-patch", "serde_json", "tokio-runtime"]
rollback = ["chrono", "tokio-runtime"]
gradual-rollout = ["fastrand", "tokio-runtime"]
remote = ["reqwest", "async-trait", "tokio-runtime", "serde_json"]

# Observability
metrics = ["opentelemetry", "parking_lot"]

# Async runtime support
tokio-runtime = ["tokio"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
arc-swap = "1.7"
thiserror = "2.0"

# Config loading (using config-rs crate)
config = { version = "0.14", default-features = false, features = ["yaml", "toml", "json"] }

# Optional: File watching
notify = { version = "7.0", optional = true, default-features = false, features = ["macos_kqueue"] }

# Optional: File formats
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }
serde_json = { version = "1.0", optional = true }

# Optional: Partial updates
json-patch = { version = "3.0", optional = true }
# Note: partial-updates requires serde_json (pulled in by json-patch)

# Optional: Rollback
chrono = { version = "0.4", optional = true, features = ["serde"] }

# Optional: Gradual rollout
fastrand = { version = "2.3", optional = true }

# Optional: Remote sources
reqwest = { version = "0.12", optional = true, features = ["json"] }
async-trait = { version = "0.1", optional = true }

# Optional: Observability
opentelemetry = { version = "0.30", optional = true, features = ["metrics"] }
parking_lot = { version = "0.12", optional = true }

# Optional: Async runtimes
tokio = { version = "1.45", optional = true, features = ["sync", "time", "rt", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1.45", features = ["full", "test-util"] }
tokio-test = "0.4"
tempfile = "3.14"
criterion = "0.5"
proptest = "1.6"

[[bench]]
name = "read_performance"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
